--- a/#styles.css
+++ b/#styles.css
@@ -1,7 +1,21 @@
 h1 {
     color:blueviolet
+    font-size: 36px;
+    font-weight: normal;
+    text-align:left;
+    }
+header h1   {
+    text-align: center;
+}
+h2  {
+    font-size: 24px ;
+    font-weight: bold;
+    font-style: italic;
 }
 
+h3  {
+    font-size: 18px;
+}
 body {
     background-color: aquamarine;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,4 +23,16 @@ body {
 p {
     color:coral;
     font-size: 24;
+    line-height: 2;
+}
+
+/* Website Styles */
+
+* {
+    
+body {
+    background-color: aquamarine;
+    color:bisque
+    font-family: Helvetica;
+    font-size: 14px;
 }
