--- a/#styles.css
+++ b/#styles.css
@@ -16,6 +16,10 @@ h2  {
 h3  {
     font-size: 18px;
 }
+p   {
+    font-size: 16px;
+}
+
 body {
     background-color: aquamarine;
     font-family: Arial, Helvetica, sans-serif;
