--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+h1  {
+    font: size 24px;
+    color: blue ;
+}
+
 *   {font-size: 100%;
     margin: 0;
     line-height: 1;
-    /*border: 1px solid red; */
 
+}
 header{
     border-bottom: 5px solid green;
 }
